fix: honk font on ios

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,13 +1,21 @@
 @font-face {
 	font-family: "Climate";
-	src: url("/fonts/ClimateCrisis-Regular-VariableFont_YEAR.ttf");
+	src: url("/fonts/ClimateCrisis-Regular-VariableFont_YEAR.ttf")
+		format("truetype");
 	font-weight: 400;
 	font-display: swap;
 }
 
 @font-face {
+	font-family: "HonkB";
+	src: url("/fonts/HonkRegular.woff2") format("woff2");
+	font-weight: 400;
+	font-display: swap;
+}
+@font-face {
 	font-family: "Honk";
-	src: url("/fonts/Honk-Regular-VariableFont_MORF,SHLN.ttf");
+	src: url("/public/fonts/Honk-Regular-VariableFont_MORF\,SHLN.ttf")
+		format("truetype");
 	font-weight: 400;
 	font-display: swap;
 }
